ctk_tests = [
  # testname, optional extra sources
  ['animated-resizing', ['frame-stats.c', 'variable.c']],
  ['animated-revealing', ['frame-stats.c', 'variable.c']],
  ['scrolling-performance', ['frame-stats.c', 'variable.c']],
  ['blur-performance', ['../ctk/ctkcairoblur.c']],
  ['flicker'],
  ['gdkgears', ['ctkgears.c']],
  ['listmodel'],
  ['motion-compression'],
  ['styleexamples'],
  ['overlayscroll'],
  ['print-editor'],
  ['simple'],
  ['subsurface'],
  ['syncscroll'],
  ['testaccel'],
  ['testactionbar'],
  ['testactions'],
  ['testadjustsize'],
  ['testanimation'],
  ['testappchooserbutton'],
  ['testappchooser'],
  ['testassistant'],
  ['testbaseline'],
  ['testbbox'],
  ['testbox'],
  ['testboxcss'],
  ['testbuttons'],
  ['testcairo'],
  ['testcalendar'],
  ['testcellarea'],
  ['testcellrenderertext'],
  ['testclipboard'],
  ['testcolorchooser'],
  ['testcombo'],
  ['testcombochange'],
  ['testdialog'],
  ['testdnd'],
  ['testellipsise'],
  ['testemblems'],
  ['testentrycompletion'],
  ['testentryicons'],
  ['testexpand'],
  ['testexpander'],
  ['testfilechooserbutton'],
  ['testfilechooser'],
  ['testflowbox'],
  ['testfontchooser'],
  ['testfontoptions'],
  ['testfontselection'],
  ['testfontselectiondialog'],
  ['testframe'],
  ['testfullscreen'],
  ['testgeometry'],
  ['testgiconpixbuf'],
  ['testglblending', ['ctkgears.c']],
  ['testgmenu'],
  ['testgrid'],
  ['testgrouping'],
  ['testctk'],
  ['testheaderbar'],
  ['testheightforwidth'],
  ['testicontheme'],
  ['testiconview'],
  ['testimage'],
  ['testinput'],
  ['testkineticscrolling'],
  ['testlevelbar'],
  ['testlist'],
  ['testlockbutton'],
  ['testlogout'],
  ['testmenubutton'],
  ['testmerge'],
  ['testmountoperation'],
  ['testmultidisplay'],
  ['testnoscreen'],
  ['testnotebookdnd'],
  ['testnouiprint'],
  ['testnumerableicon'],
  ['testoffscreen', ['ctkoffscreenbox.c']],
  ['testoffscreenwindow'],
  ['testorientable'],
  ['testoverlay'],
  ['testoverlaystyleclass'],
  ['testpopover'],
  ['testpopupat'],
  ['testpopup'],
  ['testprint', ['testprintfileoperation.c']],
  ['testrecentchooser'],
  ['testrecentchoosermenu'],
  ['testrevealer'],
  ['testrichtext'],
  ['testscale'],
  ['testscrolledge'],
  ['testscrolledwindow'],
  ['testselection'],
  ['testselectionmode'],
  ['testsensitive'],
  ['testspinbutton'],
  ['testsplitheaders'],
  ['teststack'],
  ['teststatusicon'],
  ['teststockbuttonmenu'],
  ['testswitch'],
  ['testtextview'],
  ['testtitlebar'],
  ['testtoolbar'],
  ['testtooltips'],
  ['testtoplevelembed'],
  ['testtreechanging'],
  ['testtreecolumns'],
  ['testtreecolumnsizing'],
  ['testtreednd'],
  ['testtreeedit'],
  ['testtreeflow'],
  ['testtreefocus'],
  ['testtreemenu'],
  ['testtreemodel'],
  ['testtreepos'],
  ['testtreesort'],
  ['testtreeview'],
  ['testverticalcells'],
  ['testvolumebutton'],
  ['testwindows'],
  ['testwindowsize'],
  ['testxinerama'],
  ['treestoretest'],
  ['video-timer', ['variable.c']],
]

# Conditionally compiled tests
if x11_enabled
  ctk_tests += [
    ['testsocket', ['testsocket_common.c']],
    ['testsocket_child', ['testsocket_common.c']],
  ]
endif

if os_linux
  ctk_tests += [['testfontchooserdialog']]
endif

# Pass the source dir here so programs can change into the source directory
# and find .ui files and .png files and such that they load at runtime
test_args = ['-DCTK_SRCDIR="@0@"'.format(meson.current_source_dir())]

foreach t: ctk_tests
  test_name = t.get(0)
  test_srcs = ['@0@.c'.format(test_name), t.get(1, [])]
  executable(test_name, test_srcs,
             c_args: test_args,
             dependencies: [libctk_dep, libm])
endforeach

subdir('visuals')
